Correct spacing and sizing on jobs index and detail * reduced button padding and font size * reduced font size for index intro * made all buttons 100% width * removed extraneous spacing

--- a/app/assets/stylesheets/_base-extends.scss
+++ b/app/assets/stylesheets/_base-extends.scss
@@ -59,7 +59,7 @@
   margin: 0 -20px;
 
   @include media($small) {
-    padding: lh(1.5) 20px lh(2);
+    padding: lh(1.5) 20px;
   }
 }
 
