--- a/app/assets/stylesheets/_base.scss
+++ b/app/assets/stylesheets/_base.scss
@@ -160,3 +160,9 @@ img {
     margin-bottom: 0;
   }
 }
+
+@include media($small) {
+  br {
+    display: none;
+  }
+}
