--- a/app/assets/stylesheets/_index-workshops.scss
+++ b/app/assets/stylesheets/_index-workshops.scss
@@ -67,3 +67,7 @@ section#workshops {
     }
   }
 }
+
+body#home > .secondary-wrapper {
+  padding: lh(1.5) 20px lh(2);
+}
